--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "recharts": "^2.0.8",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
